--- a/DropBoxSync/DropboxHome.storyboard
+++ b/DropBoxSync/DropboxHome.storyboard
@@ -1,7 +1,65 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2553a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="aIp-bz-wD8">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Home View Controller-->
+        <scene sceneID="nCm-eQ-c0j">
+            <objects>
+                <viewController id="aIp-bz-wD8" customClass="HomeViewController" customModule="DropBoxSync" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="wCI-lb-53G"/>
+                        <viewControllerLayoutGuide type="bottom" id="uIF-Se-sj3"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="H6o-S1-9Yw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dHt-4U-gLA">
+                                <color key="backgroundColor" red="0.083868049085140228" green="0.7500799298286438" blue="0.47459673881530762" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="laD-AG-qH0"/>
+                                </constraints>
+                                <state key="normal" title="authorize Dropbox to sync files">
+                                    <color key="titleColor" red="0.99989503622055054" green="1" blue="0.99987143278121948" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="authDropboxButtonTapped:" destination="aIp-bz-wD8" eventType="touchUpInside" id="s1I-eZ-HFa"/>
+                                    <action selector="syncFilesButtonTapped:" destination="aIp-bz-wD8" eventType="touchUpInside" id="tQF-bE-HSC"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9aT-MH-2aG">
+                                <color key="backgroundColor" red="0.1473660171" green="0.58031141760000005" blue="0.93701070549999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="GcM-ru-TbX"/>
+                                </constraints>
+                                <state key="normal" title="sync files">
+                                    <color key="titleColor" red="0.99989503619999998" green="1" blue="0.99987143280000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="syncFilesButtonTapped:" destination="aIp-bz-wD8" eventType="touchUpInside" id="LRi-kC-sLm"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="9aT-MH-2aG" firstAttribute="centerX" secondItem="H6o-S1-9Yw" secondAttribute="centerX" id="5Eb-6Z-LJb"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="dHt-4U-gLA" secondAttribute="trailing" id="AKg-Aa-s91"/>
+                            <constraint firstItem="9aT-MH-2aG" firstAttribute="width" secondItem="dHt-4U-gLA" secondAttribute="width" id="Z7D-9p-XNa"/>
+                            <constraint firstItem="dHt-4U-gLA" firstAttribute="centerY" secondItem="H6o-S1-9Yw" secondAttribute="centerY" id="fyH-Re-ToU"/>
+                            <constraint firstItem="dHt-4U-gLA" firstAttribute="leading" secondItem="H6o-S1-9Yw" secondAttribute="leadingMargin" id="hDI-v2-JVM"/>
+                            <constraint firstItem="9aT-MH-2aG" firstAttribute="height" secondItem="dHt-4U-gLA" secondAttribute="height" id="pWH-eW-oCN"/>
+                            <constraint firstItem="9aT-MH-2aG" firstAttribute="top" secondItem="dHt-4U-gLA" secondAttribute="bottom" constant="20" id="xQ5-yW-aTG"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kva-iq-FPU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4933" y="-812"/>
+        </scene>
+    </scenes>
 </document>
